Fixing map panel page scrolling issue on mobile devices

--- a/src/app/panels/map/module.css
+++ b/src/app/panels/map/module.css
@@ -1,5 +1,5 @@
 svg {
-    touch-action: none;
+    touch-action: manipulation;
 }
 
 .jvectormap-container {
@@ -7,7 +7,7 @@ svg {
     height: 100%;
     position: relative;
     overflow: hidden;
-    touch-action: none;
+    touch-action: manipulation;
 }
 
 .jvectormap-tip {
